--- a/frontend/styles/home.module.css
+++ b/frontend/styles/home.module.css
@@ -1,9 +1,6 @@
-Container .container {
-    max-width: 50%;
-    margin: 100px;
-    background: #fff;
-    min-height: 100vh;
-    padding: 24px;
+.container {
+    margin: 16px;
+    background: #0b0b0b;
     font-family: system-ui, sans-serif;
     box-sizing: border-box;
 }
@@ -18,6 +15,7 @@ Container .container {
 
 .logo {
     font-size: 20px;
+    width: 75px;
     opacity: 0.6;
     cursor: pointer;
 }
@@ -51,7 +49,12 @@ Container .container {
 }
 
 /* Assets */
-.assets h2 {
+.assets {
+    margin-top: 32px;
+    margin-bottom: 54px;
+}
+
+.asset h2 {
     color: #999;
     font-size: 16px;
     margin-bottom: 16px;
@@ -104,7 +107,7 @@ Container .container {
 }
 
 .deposit {
-    background: white;
+    background: #333;
     border: 2px solid #333;
 }
 
